@@ -1926,3 +1926,6 @@ Changed dctimestep so that output matrices (-n > 1) are preceded by a
 header, and added support for float and double output formats with -o[fd].
 
 Introduced eplus_adduvf program to compute user view factors for EnergyPlus.
+
+Changed image-plane sampling in rpict to use Hilbert curve, which gives
+less of a brushed/striped appearance to output pixels with -u- (default).
